[gd_scene load_steps=3 format=3 uid="uid://dwmqn1o154edc"]

[ext_resource type="Script" uid="uid://i0kre0b503ft" path="res://scripts/the_end.gd" id="1_endl"]
[ext_resource type="FontFile" uid="uid://ceqa1xt1morwi" path="res://assets/font/superstar_memesbruh03.ttf" id="2_2x4e2"]

[node name="TheEnd" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_endl")
metadata/_edit_vertical_guides_ = [576.0]

[node name="Dim" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="Title" type="Label" parent="."]
layout_mode = 2
offset_left = 346.0
offset_top = 133.0
offset_right = 671.0
offset_bottom = 233.0
scale = Vector2(1.4, 1.4)
theme_override_fonts/font = ExtResource("2_2x4e2")
theme_override_font_sizes/font_size = 100
text = "THE END"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 498.0
offset_top = 333.0
offset_right = 589.0
offset_bottom = 434.0
scale = Vector2(1.74, 1.74)
alignment = 1

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "CONTINUE"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "RESTART"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "EXIT"
